SUBDIRS = ext codedocs docs pdns

EXTRA_DIST = \
	INSTALL \
	NOTICE \
	README \
	.version \
	build-aux/gen-version \
	build-scripts/semistaticg++ \
	codedocs/doxygen.conf \
	contrib/powerdns.solaris.init.d \
	contrib/systemd-pdns-recursor.service \
	contrib/systemd-pdns.service \
	regression-tests/zones/unit.test

ACLOCAL_AMFLAGS = -I m4

dvi: # do nothing to build dvi
